# CogniPredictAD

./: .gitignore  Presentation.pptx  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: Dataset.txt
doc/: main.aux  main.out  main.tex  main.toc
doc/chapters/: Abstract.tex  Chapter1.aux  Chapter1.tex  Chapter10.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  Chapter7.tex  Chapter8.tex  Chapter9.tex  Frontespizio.aux  Frontespizio.tex  Tables.tex
notebooks/: 01_Preliminary_Exploratory_Analysis.ipynb  02_Dataset_Preparation.ipynb  03_Data_Exploration.ipynb  04_Data_Preprocessing.ipynb  05_New_Data_Exploration.ipynb  06_Classification_Models.ipynb  06_Hyperparameters_Tuning.ipynb  07_Classification_Models.ipynb  08_Explainability.ipynb  09_Models_Evaluation.ipynb  10_Working_Models.ipynb  grid.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
results/: AltModel.pkl  AltXAIModel_rules.txt  Model.pkl  Model1.pkl  Model2.pkl  XAIModel1_rules.txt  XAIModel2.pkl  XAIModel2_rules.txt  XAIModel_rules.txt
results/all_models/: AdaBoost.joblib  Adaptive_Boosting.pkl  Adaptive_Boosting_Sampled.pkl  Decision_Tree.joblib  Decision_Tree.pkl  Decision_Tree_Sampled.pkl  Extra_Trees.joblib  Extra_Trees_Sampled.pkl  LightGBM.joblib  Logistic_Regression.joblib  Multinomial_Logistic_Regression.pkl  Multinomial_Logistic_Regression_Sampled.pkl  Random_Forest.joblib  Random_Forest.pkl  Random_Forest_Sampled.pkl  XGBoost.joblib
results/all_models/1/: Bagging0.pkl  Bagging1.pkl  CatBoost0.pkl  CatBoost1.pkl  Decision_Tree0.pkl  Decision_Tree1.pkl  Extra_Trees0.pkl  (+9 more)
src/classification/: __init__.py  classifier.py  evaluator.py  grid.py  xai_recover.py
src/preprocessing/: __init__.py  attribute_subset_selector.py  cleaner.py  knn.py  outlier.py  preprocessor.py  transformer.py
src/visualization/: __init__.py  explainer.py  visualizer.py
(+83 files in other folders)
