[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CogniPredictAD"
version = "0.1.0"
description = "Cognitive prediction pipeline with Machine Learning models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "networkx",
    "folium",
    "imbalanced-learn",
    "scikit-learn",
    "mlxtend",
    "joblib",
    "xgboost",
    "lightgbm",
    "catboost",
    "statsmodels",
    "shap",
    "graphviz",
    "lime",
    "customtkinter",
    "openpyxl",
    "jupyter"
]

[tool.setuptools]
package-dir = { "CogniPredictAD" = "src" }
